# Altendorf-Jeulin-Model

./: .gitignore  CalculateForces.py  Fiber.py  FiberModel.py  ForceBiased.py  LICENSE.txt  README.md  SpatialHashing.py  io_utils.py  pyproject.toml  requirements.txt  run_example.py  test_utils.py  utils.py
examples/: run_example.py
src/Altendorf_Jeulin_Model/: CalculateForces.py  Fiber.py  FiberModel.py  ForceBiased.py  PoissonLines.py  SpatialHashing.py  Statistics.py  io_utils.py  utils.py
tests/: test_SpatialHashing.py  test_utils.py
