[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Altendorf_Jeulin_Model"
version = "0.0.1"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.14"
dependencies = [
    "attrs==26.1.0",
    "beautifulsoup4==4.14.3",
    "certifi==2026.5.20",
    "charset-normalizer==3.4.7",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "demjson3==3.0.6",
    "fonttools==4.60.1",
    "h11==0.16.0",
    "idna==3.17",
    "iniconfig==2.3.0",
    "joblib==1.5.3",
    "jtutils==0.0.8",
    "kiwisolver==1.4.9",
    "levenshtein==0.27.3",
    "line-profiler==5.0.2",
    "matplotlib==3.10.7",
    "numpy==2.3.3",
    "numpy-typing-compat==20250818.2.3",
    "optype==0.14.0",
    "outcome==1.3.0.post0",
    "packaging==25.0",
    "pandas==3.0.3",
    "pillow==12.0.0",
    "pluggy==1.6.0",
    "pygments==2.19.2",
    "pyparsing==3.2.5",
    "pysocks==1.7.1",
    "pytest==9.0.1",
    "python-csv==0.0.14",
    "python-dateutil==2.9.0.post0",
    "rapidfuzz==3.14.5",
    "requests==2.34.2",
    "ruff==0.14.8",
    "scikit-learn==1.8.0",
    "scikit-spatial==9.0.1",
    "scipy==1.16.3",
    "scipy-stubs==1.16.3.0",
    "selenium==4.44.0",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sortedcontainers==2.4.0",
    "soupsieve==2.8.4",
    "threadpoolctl==3.6.0",
    "tifffile==2025.10.16",
    "trio==0.33.0",
    "trio-websocket==0.12.2",
    "typing-extensions==4.15.0",
    "urllib3==2.7.0",
    "websocket-client==1.9.0",
    "wsproto==1.3.2",
    "xlrd==2.0.2",
    "xmltodict==1.0.4",
]


[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
pythonpath = ["src"]


[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
